feat: add swagger response
