# docs/swagger.yaml
@@ -1,4 +1,15 @@
 definitions:
+  dto.CategoryResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   dto.CreateCategoryRequest:
     properties:
       name:
@@ -41,6 +52,11 @@ definitions:
     required:
     - password
     - username
+    type: object
+  dto.LoginResponse:
+    properties:
+      token:
+        type: string
     type: object
   dto.RegisterRequest:
     properties:
@@ -85,10 +101,72 @@ definitions:
     - name
     - username
     type: object
+  dto.UserResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
   helper.APIResponse:
     properties:
       data: {}
       error: {}
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  helper.APIResponseCategories:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.CategoryResponse'
+        type: array
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  helper.APIResponseCategory:
+    properties:
+      data:
+        $ref: '#/definitions/dto.CategoryResponse'
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  helper.APIResponseLogin:
+    properties:
+      data:
+        $ref: '#/definitions/dto.LoginResponse'
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  helper.APIResponseUser:
+    properties:
+      data:
+        $ref: '#/definitions/dto.UserResponse'
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  helper.APIResponseUsers:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.UserResponse'
+        type: array
       message:
         type: string
       success:
@@ -105,7 +183,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseCategories'
         "500":
           description: Internal Server Error
           schema:
@@ -132,7 +210,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseCategory'
         "400":
           description: Bad Request
           schema:
@@ -179,7 +257,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseCategory'
         "404":
           description: Not Found
           schema:
@@ -210,7 +288,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseCategory'
         "400":
           description: Bad Request
           schema:
@@ -241,7 +319,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseLogin'
         "400":
           description: Bad Request
           schema:
@@ -393,7 +471,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseUser'
         "400":
           description: Bad Request
           schema:
@@ -409,7 +487,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseUsers'
         "500":
           description: Internal Server Error
           schema:
@@ -436,7 +514,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseUser'
         "400":
           description: Bad Request
           schema:
@@ -483,7 +561,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseUser'
         "404":
           description: Not Found
           schema:
@@ -514,7 +592,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/helper.APIResponse'
+            $ref: '#/definitions/helper.APIResponseUser'
         "400":
           description: Bad Request
           schema:
