# internal/dto/auth_dto.go
@@ -10,3 +10,7 @@ type LoginRequest struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
