# internal/dto/category_dto.go
@@ -1,5 +1,7 @@
 package dto
 
+import "time"
+
 type CreateCategoryRequest struct {
 	Name string `json:"name" binding:"required"`
 }
@@ -7,3 +9,12 @@ type CreateCategoryRequest struct {
 type UpdateCategoryRequest struct {
 	Name string `json:"name" binding:"required"`
 }
+
+type CategoryResponse struct {
+	ID        uint      `json:"id"`
+	Name      string    `json:"name"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type CategoryResponses []CategoryResponse
