# internal/dto/user_mapper.go
@@ -1,0 +1,21 @@
+package dto
+
+import "github.com/msyahruls/dgw-go-test/internal/domain"
+
+func ToUserResponse(u *domain.User) UserResponse {
+	return UserResponse{
+		ID:        u.ID,
+		Username:  u.Username,
+		Name:      u.Name,
+		CreatedAt: u.CreatedAt,
+		UpdatedAt: u.UpdatedAt,
+	}
+}
+
+func ToUserResponses(users []domain.User) []UserResponse {
+	res := make([]UserResponse, len(users))
+	for i, u := range users {
+		res[i] = ToUserResponse(&u)
+	}
+	return res
+}
